FileChooser: use large system icons in shortcuts panel also in Java 8 to 16